2008-04-20 Raphael Neider <rneider AT web.de>

	* device/include/pic16/pic18f2455.h: added bitfields for port C

2008-04-20 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/peep.c: Use werror for error messages.

2008-04-19 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/peep.h (declaration of notUsed()),
	* src/z80/main.c (enabled notUsed() for z80 port, documented z80_port
	  struct),
	* src/z80/z80.h (added dependency on peep.h),
	* src/z80/peep.c (definition of notUsed()): Implemented RFE #1880202
	  for Z80.

2008-04-19 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCpeeph.c (added support for notUsed()),
	* src/mcs51/main.c (added dependency on peep.h, documented mcs51_port
	  struct),
	* src/port.h (removed dependency on mcs51/peep.h, added declaration
	  for notUsed()): Implemented generic (that is not port-specific) part
	  of RFE #1880202.	

2008-04-17 Maarten Brock <sourceforge.brock AT dse.nl>

	* as/link/mcs51/lkmem.c (summary2): fixed bug 1796077
	* device/lib/libsdcc.lib,
	* device/lib/Makefile.in,
	* support/regression/ports/mcs51-xstack-auto/spec.mk,
	* device/lib/calloc.c: renamed to _calloc.c
	* device/lib/free.c: renamed to _free.c
	* device/lib/malloc.c: renamed to _malloc.c
	* device/lib/realloc.c: renamed to _realloc.c
	* src/ds390/gen.c (aopGet, aopPut, genPlusBits, genDataPointerSet,
	  genNearPointerSet, genPagedPointerSet): synchronized with mcs51/gen.c
	* src/ds390/gen.c (popForBranch, genIfxJump, genCmp, genCmpEq, ifxForOp,
	  genAnd, genOr, genXor, genIfx, gen390Code): fixed bug 1509084
	* src/mcs51/gen.c (popForBranch, genIfxJump, genCmp, genCmpEq,
	  ifxForOp, genAnd, genOr, genXor, genNearPointerGet,
	  genPagedPointerGet, genFarPointerGet, genCodePointerGet,
	  genGenPointerGet, genIfx, gen51Code): fixed bug 1509084
	* src/ds390/gen.c,
	* src/mcs51/gen.c: throughout cosmetic changes for syncing both
	* src/SDCCsymt.h: updated IS_OP_RUONLY, IS_OP_ACCUSE
	* support/regression/tests/bug1509084.c: new, added
